<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="hei">START2</string>
    <string name="startBu2Text">Start3</string>
    <string name="star3ttonText">START4</string>
    <string name="starttonText">120min</string>
    <string name="start2Text">90min</string>
    <string name="start3Text">90min</string>
    <string name="start4Text">120min</string>
    <string name="start2text">60min</string>
    <string name="start1ButtonText">30min</string>
    <string name="Start">Start</string>
    <string name="time_slider">Time Slider</string>
    <string name="pause_slider">Pause Slider</string>
    <string name="antall_repetitions">Antall repetitions</string>
    <string name="defrep">0</string>
</resources>